--- a/테스트보고서.md
+++ b/테스트보고서.md
@@ -9,3 +9,74 @@
 | TC - 03   | drawText()            | 대화창 텍스트 설정 및 그리기 테스트                          | Pass    |
 | TC - 04   | drawchat()            | chatter 빈 문자열 판별 및 전체 대화창 UI 그리기 테스트       | Pass    |
 | TC - 05   | hasNextPage           | indexY와 dialogue의 길이를 비교하여 더 넘길 대화창이 있는지 판별 테스트 | Pass    |
+---
+### Sprites 클래스
+
+| Test Case | UUT (Unit Under Test) | Description                                                  | Results |
+| --------- | --------------------- | ------------------------------------------------------------ | ------- |
+| TC - 01   | get_keys() | 키가 제대로 받아지는지 테스트 | Pass    |
+| TC - 02   | drawchatter()         | 대화창 이름 이미지 그리기 테스트                             | Pass    |
+| TC - 03   | set_pos() | 캐릭터의 위치 설정 테스트                          | Pass    |
+| TC - 04   | chk_walls() | 벽 충돌 테스트 | Pass    |
+| TC - 05   | chk_items() | 아이템이 있는지 테스트 | 아이템이 인식이 안됨 Fail |
+| TC - 06   | chk_items() | 아이템이 있는지 테스트 | Pass    |
+| TC - 07   | chk_potal() | 포탈에 탑승시 맵 변경 테스트 | 포탈에 들어갈 수 없는 경우 못탄다는 메세지 무한 반복 Fail    |
+| TC - 08   | chk_potal() | 포탈에 탑승시 맵 변경 테스트 |나온 출구에 캐릭터가 나오지 않음 Fail    |
+| TC - 09   | chk_potal() | 포탈에 탑승시 맵 변경 테스트 | Pass   |
+| TC - 10   | chkdialogue() | 대화 창이 뜨는 위치에 이동시 창이 뜨는지 확인 | Pass   |
+| TC - 11   | chkdirection() | 캐릭터 바라보는 위치별 이미지 변경 | 너무 이미지 변환이 빠름 Fail   |
+| TC - 12   | chkdirection() | 캐릭터 바라보는 위치별 이미지 변경 | Pass   |
+---
+### Wall, npcWall 클래스
+
+| Test Case | UUT (Unit Under Test) | Description                                                  | Results |
+| --------- | --------------------- | ------------------------------------------------------------ | ------- |
+| TC - 01   | __init__()            | 객체 생성시 제대로 이미지가 나오는지 테스트                             | Pass    |
+---
+### Portal, Dialogue 클래스
+
+| Test Case | UUT (Unit Under Test) | Description                                                  | Results |
+| --------- | --------------------- | ------------------------------------------------------------ | ------- |
+| TC - 01   | make_dialogue()            | tmx데이터에 들어있는 dialogue list 제대로 생성되는지 테스트 | Pass    |
+---
+### Item 클래스
+
+| Test Case | UUT (Unit Under Test) | Description                                                  | Results |
+| --------- | --------------------- | ------------------------------------------------------------ | ------- |
+| TC - 01   | make_dialogue()            | tmx데이터에 들어있는 dialogue list 제대로 생성되는지 테스트 | Pass    |
+| TC - 02   | update()            | item이 지정해둔 npc와 같이 이동하는지 테스트 | Pass    |
+---
+### Game 클래스
+
+| Test Case | UUT (Unit Under Test) | Description                                                  | Results |
+| --------- | --------------------- | ------------------------------------------------------------ | ------- |
+| TC - 01   | load_data() | 지정해둔 경로의 이미지가 제대로 들어오는지 테스트 | Pass    |
+| TC - 02   | new()         | sprite생성 및 tmx데이터에 저장해둔 값들 매개변수로 넘겼을때 제대로 저장이 되는지 테스트              | tmx데이터가 불러와지지 않음 Fail    |
+| TC - 03   | new()         | sprite생성 및 tmx데이터에 저장해둔 값들 매개변수로 넘겼을때 제대로 저장이 되는지 테스트              | Pass |
+| TC - 04   | run() | 게임 동작 및 pause 테스트 | 게임화면을 멈출시 게임이 종료됨 Fail    |
+| TC - 05   | run() | 게임 동작 및 pause 테스트 | Pass |
+| TC - 06   | update() | 카메라 위치와 sprite 위치 변경 테스트 | Pass    |
+| TC - 07   | draw() | 스크린이 제대로 뜨는지 테스트 | Pass |
+| TC - 08   | events() | 키 들어오면 게임창이 꺼지는지 테스트 | Pass |
+| TC - 09   | wait() | 키가 들어오기 전까지 게임창 정지 테스트 | 게임창이 꺼진다. Fail |
+| TC - 10   | wait() | 키가 들어오기 전까지 게임창 정지 테스트 | Pass |
+| TC - 11   | startscreen(), prologue(), ending() | 이미지가 애니메이션 처럼 작동되는지 테스트 | 너무 이미지 변환이 빠름 Fail |
+| TC - 12   | startscreen(), prologue(), ending() | 이미지가 애니메이션 처럼 작동되는지 테스트 | 속도가 너무 빨라 게임창이 종료됨 Fail |
+| TC - 13   | startscreen(), prologue(), ending() | 이미지가 애니메이션 처럼 작동되는지 테스트 | Pass |
+| TC - 14   | render_shadow() | 화면이 어두워지고 캐릭터 주변만 밝아지는지 테스트 | Pass |
+---
+### TiledMap 클래스
+
+| Test Case | UUT (Unit Under Test) | Description                                                  | Results |
+| --------- | --------------------- | ------------------------------------------------------------ | ------- |
+| TC - 01   | render()            | tmx이미지가 제대로 그려지는지 확인 | 아이템이 그려지지 않음 Fail    |
+| TC - 02   | render()            | tmx이미지가 제대로 그려지는지 확인 | Pass |
+| TC - 03   | make_map()            | tmx맵을 기반으로 맵이 만들어지는지 테스트 | Pass    |
+---
+### Camera 클래스
+
+| Test Case | UUT (Unit Under Test) | Description                                                  | Results |
+| --------- | --------------------- | ------------------------------------------------------------ | ------- |
+| TC - 01   | apply()        |  | Pass    |
+| TC - 02   | apply_rect()   |  | Pass |
+| TC - 03   | update()            | 카메라의 위치 변환 및 맵 밖을 카메라가 안비추는지 테스트 | Pass    |
