띄어쓰기 추가

--- a/최종보고서.md
+++ b/최종보고서.md
@@ -545,7 +545,7 @@ gitrep : https://github.com/rhrkd1020/Escape-Kookmin
 <br></br>
 ## 플레이 화면
 
-<iframe width="640" height="360" src="https://youtu.be/U8MVDeeiPpU" frameborder="0" gesture="media" allowfullscreen=""></iframe>
+<iframe width="640" height="360" src="https://youtu.be/U8MVDeeiPpU" frameborder="0" gesture="media" allowfullscreen=""></iframe> <br>
 안보일 시 링크 : https://youtu.be/U8MVDeeiPpU <br>
 또는 git 파일에 "게임 공략영상.mp4" 실행
 
