--- a/최종보고서.md
+++ b/최종보고서.md
@@ -14,7 +14,7 @@ gitrep : https://github.com/rhrkd1020/Escape-Kookmin
 ---
 <br></br>
 ## 제작동기
-> ad프로젝트로 게임을 개발하고자 했는데 학교 배경의 게임이 아무래도 친숙하니 흥미를 끌수 있지 않을까 해서 시작했다. (말좀 고쳐주삼)
+> ad프로젝트로 게임을 개발하고자 했다. 같은 반 학생들 사이에서 평가를 어떻게 하면 잘받을까 생각하다 학교 배경의 게임이 친숙하니 흥미를 끌수 있지 않을까 해서 시작했다. 그리고 조원 두 사람다 게임을 좋아하고 게임을 만들어보고 싶어 했기에 게임을 제작하였다.
 
 ---
 <br></br>
