--- a/최종보고서.md
+++ b/최종보고서.md
@@ -557,4 +557,4 @@ gitrep : https://github.com/rhrkd1020/Escape-Kookmin
 >  다른분반의 ad 수준과 달리 우리분반의 ad수준은 매우 높다고 생각하였다. 어떤 것을 만들어야 수준이 높은 우리반에서 상위권을 따낼 수 있을까를 생각하였다. 그러다 가장 친숙한 우리 학교를 주제로 만들면 인기 있겠다는 생각을 했다. 그렇게 우리 학교를 바탕으로한 스토리 게임을 제작 하게 되었다. python을 사용하지 않는다면 이러한 게임을 만들어주는 쯔꾸르 메이커나 unity를 사용하여 제작하였겠지만 그러하지 못했다. python으로 모든 작업들을 다 해보는 과정에서 python에 대한 지식이 상당히 늘었고 그러한 지식으로 생각했던 거의 모든 작업을 구현했다. 아쉬운 점은 원래 게임의 동선이나 npc를 더 추가할 계획이었으나 다른 과제, ad, 유레카 대회, 보고서가 겹치면서 시간이 없어 못했다는 점이다. 그리고 8분이었을줄 알았던 발표시간은 4분이었고 기존에는 ppt내용을 모두 설명하고 빠르게 게임 공략을 보여주어 요소들을 다보여줄 생각이었으나 그러지 못한것이 너무 아쉽다. 다시 발표를 할 수 있다면 차라리 ppt를 안보여주고 게임공략을 통해 모든 것을 보여주고싶다. 우리 게임을 얼빗 본다면 그냥 체팅이나 퀴즈 같은 것들은 게임화면 멈추고 이미지 띄우면 되는거 아냐 ? 라던지 간단하게 생각할 수 있다. 하지만 pygame으로 이러한 게임을 만드는 자료들이 많이 없었고 tmx로 만드는 방법도 찾느라 오래걸렸으며 게임을 멈추고 띄우는 과정에도 게임이 멈추는 등 문제가 생겼다. 우리가 만든 게임을 쉽다고 생각 안해줬으면 좋겠다는 마음이다. 아쉬운 마음에 말이 길어졌지만 게임쪽으로 진로를 잡아도 좋겠다고 생각했던 나에게 python으로 게임을 만들어 볼 수 있었던 좋은 경험이었던 것 같다.
 
 #### 김민정
-> 이번 ad프로젝트는 구현에 얽매이지 않고 python을 사용한다면 어떤 내용이든 원하는 내용을 구현할 수 있어서 정말 해보고 싶었던 주제로 진행했다. 다행히 조원과 뜻이 잘 맞아 순조롭게 계획을 진행햇으나, 살인적인 2학기 스케줄과 과제, 시험으로 인해 애초에 계획했던 것보다는 범위가 줄어들어서 아쉬운 마음이다. 그래도 무사히 마무리 할 수 있어서 다행이라고 생각하고 개인적으로는 우리 게임이 단순히 ad프로젝트로 그치기엔 아쉬운 작품이라고 생각한다. 많은 사람들이 플레이해주고 즐겨주었으면 좋겠다!
+> 이번 ad프로젝트는 구현에 얽매이지 않고 python을 사용한다면 어떤 내용이든 원하는 내용을 구현할 수 있어서 정말 해보고 싶었던 주제로 진행했다. 게임이라는 큰 틀안에서 무엇을 할 수 있을까 고민했을때 python이라는 한정된 언어에서는 pygame이 가장 게임 개발에 적합하다고 생각이 들어서 그렇게 진행했으나 top-down view를 가지는 게임 특성상 관련된 자료나 예제들이 상당히 적었고 어렵게 어렵게 찾은 pytmx를 이용하여 겨우 개발에 착수하였다. 개발 과정에서는 다행히 조원과 뜻이 잘 맞고 통해서 순조롭게 계획을 진행했으나 살인적인 2학기 스케줄과 과제, 시험으로 인해 애초에 계획했던 것보다는 개발 범위가 줄어들어서 아쉬운 마음이다. 사실 원래 구현하려고 했던 범위는 국민대 전체지만 7호관 내부도 나름 꽤 현실적으로 구현하고 스토리나 퀴즈 등등 학교와 많이 연관지어서 만들었다. 무사히 마무리 할 수 있어서 다행이라고 생각하고 개인적으로는 우리 게임이 단순히 ad프로젝트로 그치기엔 많이 아쉬운 작품이라고 생각한다. 이 게임을 알게 된 많은 사람들이 플레이해주고 즐겨주었으면 좋겠다!
